--- a/1/src/index.css
+++ b/1/src/index.css
@@ -39,12 +39,28 @@ body {
   justify-content: center;
 }
 
+.server-error {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  font-weight: 500;
+  color: red;
+  margin: 0 auto;
+}
+
+.spinner {
+  text-align: center;
+}
+
 .app {
+  margin: 0 auto;
   font-family: 'shabnam', 'sans-serif';
   padding: 30px;
   text-align: center;
+  max-width: 800px;
   width: 90%;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
